--- a/Specsify_Source_Codes/3_Home_page/Home_page.html
+++ b/Specsify_Source_Codes/3_Home_page/Home_page.html
@@ -48,7 +48,7 @@
     <div class="logo">
         <div style="height: 100px; background-color: blue;"></div>
     </div>
-    <div class="homeparagraph">
+    <div id="homeparagraph">
         <h1>FIND YOUR NEW LAPTOP NOW!</h1>
         <p>This app uses a series of algorithms to filter out and 
             provide you with the specs that you desire and need based on a 
