--- a/Specsify_Source_Codes/Default_page/Default_page.html
+++ b/Specsify_Source_Codes/Default_page/Default_page.html
@@ -32,13 +32,13 @@
             <!-- Links -->
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                <a class="nav-link" href="#">Home page<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Account</a>
+                <a class="nav-link" href="#">About us</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Settings</a>
+                <a class="nav-link" href="#">Contact us</a>
                 </li>
             </ul>
             <!-- Links -->
