Tiffany added database and algorithm

--- a/Specsify_Source_Codes/5_Questionnaire_page/questionpage.html
+++ b/Specsify_Source_Codes/5_Questionnaire_page/questionpage.html
@@ -164,10 +164,10 @@ function saveInput() {
 
 
 db.collection("student").doc("answers").set({
-    Result1: document.getElementById("education").value,
-    Result2: document.getElementById("school").value,
-    Result3: document.getElementById("travel").value,
-    Result4: document.getElementById("download").value
+    Result1 = document.getElementById("education").value,
+    Result2 = document.getElementById("school").value,
+    Result3 = document.getElementById("travel").value,
+    Result4 = document.getElementById("download").value
 })
 .then(function() {
     alert("Document successfully written!");
