Updated home page Tyler

--- a/Specsify_Source_Codes/3_Home_page/Home_page.html
+++ b/Specsify_Source_Codes/3_Home_page/Home_page.html
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="#">About us</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Contact us</a>
+                <a class="nav-link" href="#">Need help?</a>
                 </li>
             </ul>
             <!-- Links -->
@@ -48,12 +48,13 @@
     <div class="logoHandler">
       <img src="../Pictures/Logo.png" alt="logo" id="logoh">
     </div>
-    <div id="homeparagraph">
-        <h1>FIND YOUR NEW LAPTOP NOW!</h1>
-        <p>This app uses a series of algorithms to filter out and
+    <div class="descriptionDiv">
+        <h1 class="head1">FIND YOUR NEW LAPTOP NOW!</h1>
+        <br>
+        <div class="paraHome">This app uses a series of algorithms to filter out and
             provide you with the specs that you desire and need based on a
             series of questions that will be provided.
-            Click the button below to begin the questionaire.</p>
+            Click the button below to begin the questionnaire.</div>
     </div>
 </body>
 </html>
