--- a/Specsify_Source_Codes/3_Home_page/Home_page.html
+++ b/Specsify_Source_Codes/3_Home_page/Home_page.html
@@ -55,5 +55,13 @@
             series of questions that will be provided.
             Click the button below to begin the questionaire.</p>
     </div>
+
+    <!-- Buttons -->
+    
+    <div class="btn">
+        <button class="btn savedA">Saved Answers</button>
+        <button class="btn save">Saved Recommendations</button>
+    </div>
+
 </body>
 </html>
