--- a/Specsify_Source_Codes/4_Account_page/Account_page.html
+++ b/Specsify_Source_Codes/4_Account_page/Account_page.html
@@ -66,6 +66,7 @@
         <p id="email"> Email </p>
     </div>
 
+    <!-- Buttons -->
         <div class="btn">
                 <button class="btn savedA">Saved Answers</button>
                 <button class="btn save">Saved Recommendations</button>
