--- a/Specsify_Source_Codes/7_About_us_page/AboutUs_page.html
+++ b/Specsify_Source_Codes/7_About_us_page/AboutUs_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home Page</title>
+    <title>Login page</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -38,23 +38,12 @@
                 <a class="nav-link" href="#">About us</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Need help?</a>
+                <a class="nav-link" href="#">Contact us</a>
                 </li>
             </ul>
             <!-- Links -->
             </div>
             <!-- Collapsible content -->
     </nav>
-    <div class="logoHandler">
-      <img src="../Pictures/Logo.png" alt="logo" id="logoh">
-    </div>
-    <div class="descriptionDiv">
-        <h1 class="head1">FIND YOUR NEW LAPTOP NOW!</h1>
-        <br>
-        <div class="paraHome">This app uses a series of algorithms to filter out and
-            provide you with the specs that you desire and need based on a
-            series of questions that will be provided.
-            Click the button below to begin the questionnaire.</div>
-    </div>
 </body>
 </html>
