--- a/Specsify_Source_Codes/3_Home_page/Home_page.html
+++ b/Specsify_Source_Codes/3_Home_page/Home_page.html
@@ -49,12 +49,19 @@
       <img src="../Pictures/Logo.png" alt="logo" id="logoh">
     </div>
     <div class="descriptionDiv">
-        <h1 class="head1">FIND YOUR NEW LAPTOP NOW!</h1>
-        <br>
-        <div class="paraHome">This app uses a series of algorithms to filter out and
+        <h4 class="head1">FIND YOUR NEW LAPTOP NOW!</h4>
+        <div class="paraHome">
+            <p>This app uses a series of algorithms to filter out and
             provide you with the specs that you desire and need based on a
             series of questions that will be provided.
-            Click the button below to begin the questionnaire.</div>
+            Click the button below to begin the questionnaire.</p>
+        </div>
+    </div>
+
+    <div class="button">
+            <button class="button NEWQ">BEGIN NEW QUESTIONAIRE</button>
+            <button class="button CONTQ">CONTINUE QUESTIONAIRE</button>
+            <button class="button SAVEDA">SAVED ANSWERS</button>
     </div>
 </body>
 </html>
