about us page & updates - Tyler

--- a/Specsify_Source_Codes/8_Help_page/help_page.html
+++ b/Specsify_Source_Codes/8_Help_page/help_page.html
@@ -45,5 +45,11 @@
             </div>
             <!-- Collapsible content -->
     </nav>
+
+    <div class="container">
+      <div>
+
+      </div>
+    </div>
 </body>
 </html>
