--- a/Specsify_Source_Codes/1_Landing_page/landingPage.html
+++ b/Specsify_Source_Codes/1_Landing_page/landingPage.html
@@ -3,7 +3,7 @@
   <head>
     <title>About us</title>
     <meta charset="utf-8"/>
-    <link rel="stylesheet" href="aboutUs_CSS.css">
+    <link rel="stylesheet" href="landingPage_CSS.css">
   </head>
   <body>
     <div class="container">
