--- a/help_page.html
+++ b/help_page.html
@@ -10,8 +10,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="Home_JS.js"></script>
-    <link rel="stylesheet" href="Home_CSS.css">
+    <script type="text/javascript" src="script/navbar.js"></script>
+    <link rel="stylesheet" href="style/navbar.css">
 </head>
 <body>
     <!--Navbar-->
