--- a/Specsify_Source_Codes/3_Home_page/Home_page.html
+++ b/Specsify_Source_Codes/3_Home_page/Home_page.html
@@ -58,10 +58,15 @@
         </div>
     </div>
 
-    <div class="button">
-            <button class="button NEWQ">BEGIN NEW QUESTIONAIRE</button>
-            <button class="button CONTQ">CONTINUE QUESTIONAIRE</button>
-            <button class="button SAVEDA">SAVED ANSWERS</button>
-    </div>
+        <div class="button1">
+            <button class="button1 NEWQ">BEGIN NEW QUESTIONAIRE</button>
+        </div>
+        <div class="button2">
+            <button class="button2 CONTQ">CONTINUE QUESTIONAIRE</button>
+        </div>
+        <div class="button3">
+            <button class="button3 SAVEDA">SAVED ANSWERS</button>
+        </div>
+
 </body>
 </html>
