shubhi's updates to css

--- a/landingPage.html
+++ b/landingPage.html
@@ -3,19 +3,26 @@
   <head>
     <title>About us</title>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/landingPage_CSS.css">
   </head>
   <body>
-    <div class="container">
-      <div class="empty"></div>
-      <div class="welcomeHandler">
-        <h1 class="welcome">Welcome</h1>
-      </div>
-      <div class="para">
-          <p class="para1">Specsify provides you with the correct recommendations
-          of laptop specs that suits your needs!</p>
-          <p class="para1">Laptop searching has never been easier!</p>
-      </div>
+    <div class="empty"></div>
+    <div class="welcome">
+      <p>Welcome</p>
     </div>
+    <div class="description">
+        <p>Specsify provides you with the correct recommendations of laptop specs that suits your needs!</p>
+        <p>Laptop searching has never been easier!</p>
+    </div>
+    
+    <div class="empty_1"></div>
+
+    <!-- Buttons -->
+    <form action="Home_page.html">
+      <div class="btn">
+        <button class="btn begin">Lets Begin!</button>
+      </div>
+    </form>
   </body>
 </html>
