--- a/landingPage.html
+++ b/landingPage.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>About us</title>
+    <title>Landing page</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/landingPage_CSS.css">
+    <link rel="stylesheet" href="style/landingpage.css">
   </head>
   <body>
     <div class="empty"></div>
@@ -15,11 +15,11 @@
         <p>Specsify provides you with the correct recommendations of laptop specs that suits your needs!</p>
         <p>Laptop searching has never been easier!</p>
     </div>
-    
+
     <div class="empty_1"></div>
 
     <!-- Buttons -->
-    <form action="Home_page.html">
+    <form action="login.html">
       <div class="btn">
         <button class="btn begin">Lets Begin!</button>
       </div>
