Shubhi's updates: help page + about us

--- a/Home_page.html
+++ b/Home_page.html
@@ -57,6 +57,7 @@
             Click the button below to begin the questionnaire.</p>
         </div>
     </div>
+    <div id="empty"></div>
     <form action="questionnaire.html">
       <div class="button">
             <button class="button NEWQ">BEGIN NEW QUESTIONAIRE</button>
