--- a/questionnaire.html
+++ b/questionnaire.html
@@ -78,8 +78,9 @@
             </div>
             <!-- Collapsible content -->
     </nav>
-    <h1> Hello CST!</h1>
-    <h1> Welcome to the Quiz</h1>
+    <div class="title">
+      <p><b> Welcome to the Quiz! </b></p>
+    </div>
     <br>
 
     <!----------------------------------->
@@ -134,15 +135,12 @@
           <option value="others">Others</option>
 
         </select>
-            <br>
-            <br>
-            <br>
-            <br>
-            <input type="submit">
+        <div class="empty"></div>
+            <button class= "submitButton", type="submit">Submit</button>
         </form>
         <br>
         <form action="Answers.html">
-            <button type="submit">Continue</button>
+            <button class="button", type="submit">Continue</button>
         </form>
 
     </div>
