--- a/Account_page.html
+++ b/Account_page.html
@@ -68,8 +68,8 @@
 
     <!-- Buttons -->
         <div class="btn">
-            <button class="btn savedA">Saved Answers</button>
-            <button class="btn save">Saved Recommendations</button>
+            <button>Saved Answers</button>
+            <button>Saved Recommendations</button>
         </div>
 
 </body>
