--- a/Home_page.html
+++ b/Home_page.html
@@ -49,7 +49,8 @@
       <img src="image/Logo.png" alt="logo" id="logoh">
     </div>
     <div class="descriptionDiv">
-        <h4 class="head1">FIND YOUR NEW LAPTOP NOW!</h4>
+        <p id="head1">Find Your New Laptop Now!</p>
+        <div class="empty"></div>
         <div class="paraHome">
             <p>This app uses a series of algorithms to filter out and
             provide you with the specs that you desire and need based on a
