--- a/landingPage.html
+++ b/landingPage.html
@@ -11,6 +11,7 @@
     <div class="welcome">
       <p>Welcome</p>
     </div>
+    <p id="under">To Specsify!</p>
     <div class="description">
         <p>Specsify provides you with the correct recommendations of laptop specs that suits your needs!</p>
         <p>Laptop searching has never been easier!</p>
