--- a/Home_page.html
+++ b/Home_page.html
@@ -32,13 +32,13 @@
             <!-- Links -->
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="Home_page.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">About us</a>
+                <a class="nav-link" href="Account_page.html">Account</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Need help?</a>
+                <a class="nav-link" href="help_us.html">Need help?</a>
                 </li>
             </ul>
             <!-- Links -->
