--- a/landingPage.html
+++ b/landingPage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <title>Specsify</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/7.5.0/firebase-app.js"></script>
@@ -29,9 +29,10 @@
         body { border-top: 16px solid #ffa100; }
       }
     </style>
+
+    <link rel="stylesheet" href="style/landingpage.css">
   </head>
   <body>
-<<<<<<< HEAD
     <div class="empty"></div>
     <div class="welcome">
       <p>Welcome</p>
@@ -40,28 +41,13 @@
     <div class="description">
         <p>Specsify provides you with the correct recommendations of laptop specs that suits your needs!</p>
         <p>Laptop searching has never been easier!</p>
-=======
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
->>>>>>> 842d4ffc0923704d9f28f1b2b69dcf94d5438cb6
     </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
+    <div class="btn">
+      <button class="btn begin">Let's Get Started!</button>
+    </div>
 
     <script>
       document.addEventListener('DOMContentLoaded', function() {
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
         try {
           let app = firebase.app();
           let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
