Tiffany changed the algorithm and layout

--- a/questionnaire.html
+++ b/questionnaire.html
@@ -136,11 +136,12 @@
 
         </select>
         <div class="empty"></div>
-            <button class= "submitButton", type="submit">Submit</button>
+            
         </form>
         <br>
         <form action="Answers.html">
-            <button class="button", type="submit">Continue</button>
+<!--            <button class="button", type="submit">Continue</button>-->
+          <button class= "submitButton", type="submit">Submit</button>
         </form>
 
     </div>
