--- a/Answers.html
+++ b/Answers.html
@@ -58,13 +58,13 @@
             <!-- Links -->
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                <a class="nav-link" href="#">Home page<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="Home_page.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Account</a>
+                <a class="nav-link" href="Account_page.html">Account</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Settings</a>
+                <a class="nav-link" href="help_us.html">Need help?</a>
                 </li>
             </ul>
             <!-- Links -->
