Tiffany added final touches

--- a/login.html
+++ b/login.html
@@ -86,6 +86,7 @@ const db = firebase.firestore();
                     document.getElementById('loader').style.display = 'none';
                 }
             },
+          credentialHelper:firebaseui.auth.CredentialHelper.NONE,
             // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
             signInFlow: 'popup',
             signInSuccessUrl: 'Home_page.html',
