--- a/questionnaire.html
+++ b/questionnaire.html
@@ -98,37 +98,37 @@
 -->
 
             <p>What is your major?</p>
-            <select size="4" multiple="multiple" name="major" id="q0">
-          <option value="business">Business</option>
-          <option value="sciences">Sciences</option>
-          <option value="nursing">Nursing</option>
-          <option value="others">Others</option>
+            <select size="4" required = "required" name="major" id="q0">
+          <option value="Business">Business</option>
+          <option value="Sciences">Sciences</option>
+          <option value="Nursing">Nursing</option>
+          <option value="Others">Others</option>
 
         </select>
 
 
             <p>What type of school work will you mainly be using the device for?</p>
-            <select size="3" multiple="multiple" name="usage" id="q1">
-          <option value="mostly coding">mostly coding</option>
-          <option value="mostly word or excel">mostly word or excel</option>
-          <option value="mostly browser based applications">mostly browser based applications</option>
+            <select size="3" required = "required" name="usage" id="q1">
+          <option value="Mostly coding">Mostly coding</option>
+          <option value="Mostly word or excel">Mostly word or excel</option>
+          <option value="Mostly browser based applications">Mostly browser based applications</option>
 
 
         </select>
 
 
             <p>How frequently will you bring this device to school?</p>
-            <select size="3" multiple="multiple" name="frequency" id="q2">
-          <option value="once a week">once a week</option>
+            <select size="3" required = "required" name="frequency" id="q2">
+          <option value="Once a week">Once a week</option>
           <option value="2-3 times a week">2-3 times a week</option>
-          <option value="daily">daily</option>
+          <option value="Daily">Daily</option>
 <!--          <option value="others" selected="selected">Others</option>-->
 
         </select>
 
 
             <p>Will you be using the device more heavily for (hobbies outside of school work)?</p>
-            <select size="4" multiple="multiple" name="hobbies" id="q3">
+            <select size="4" required = "required" name="hobbies" id="q3">
           <option value="Gaming">Gaming</option>
           <option value="Video Editing">Video Editing</option>
           <option value="Photography">Photography</option>
@@ -136,12 +136,12 @@
 
         </select>
         <div class="empty"></div>
-            
+            <button class= "submitButton", type="submit">Submit</button>
         </form>
         <br>
         <form action="Answers.html">
-<!--            <button class="button", type="submit">Continue</button>-->
-          <button class= "submitButton", type="submit">Submit</button>
+            <button class="submitButton", type="submit">Continue</button>
+          
         </form>
 
     </div>
