--- a/questionnaire.html
+++ b/questionnaire.html
@@ -132,7 +132,7 @@
           <option value="Gaming">Gaming</option>
           <option value="Video Editing">Video Editing</option>
           <option value="Photography">Photography</option>
-          <option value="others">Others</option>
+          <option value="Others">Others</option>
 
         </select>
         <div class="empty"></div>
