--- a/help_us.html
+++ b/help_us.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <title>About us</title>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
+    <!-- Navigation bar bootstrap -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -19,7 +21,7 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
     <script>
-    // Your web app's Firebase configuration
+        // Our web app's Firebase configuration
         var firebaseConfig = {
             apiKey: "AIzaSyDWTUQMurE64ovJnLuICKLCgz2zSlsW0eo",
             authDomain: "cybersify-2019.firebaseapp.com",
@@ -31,59 +33,64 @@
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
-            var db = firebase.firestore();
+        var db = firebase.firestore();
     </script>
+    <!-- CSS associated with this page -->
     <link rel="stylesheet" href="style/Help_page.css">
-  </head>
-  <body>
-        <!--Navbar-->
-        <nav class="navbar navbar-dark  indigo darken-2" style="background-color: #2f3e9f; margin: 10px;">
+</head>
 
-                <!-- Navbar brand -->
-                <a class="navbar-brand" href="#">Specsify</a>
+<body>
+    <!--Navbar-->
+    <nav class="navbar navbar-dark  indigo darken-2" style="background-color: #2f3e9f; margin: 10px;">
 
-                <!-- Collapse button -->
-                <button class="navbar-toggler third-button" type="button" data-toggle="collapse" data-target="#navbarSupportedContent22"
-                aria-controls="navbarSupportedContent22" aria-expanded="false" aria-label="Toggle navigation">
-                <div class="animated-icon3"><span></span><span></span><span></span></div>
-                </button>
+        <!-- Navbar brand -->
+        <a class="navbar-brand" href="#">Specsify</a>
 
-                <!-- Collapsible content -->
-                <div class="collapse navbar-collapse" id="navbarSupportedContent22">
+        <!-- Collapse button -->
+        <button class="navbar-toggler third-button" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent22" aria-controls="navbarSupportedContent22" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <div class="animated-icon3"><span></span><span></span><span></span></div>
+        </button>
 
-                <!-- Links -->
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+        <!-- Collapsible content -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent22">
+
+            <!-- Links -->
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
                     <a class="nav-link" href="Home_page.html">Home<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="Account_page.html">Account</a>
-                    </li>
-                    <li class="nav-item">
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="help_us.html">Need help?</a>
-                    </li>
-                </ul>
-                </div>
-            </nav>
-                <!-- End of the navbar -->
-                <!-- Text -->
-                <div class="empty1"></div>
-                <div class="title">
-                    <p id="needHelp"><b><i>Need Help?</i></b></p>
-                    <p id="assist">Have a question? Need some help?
-                        Let us know how we can assist you!</p>
-                </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- End of the navbar -->
+    <!-- Text -->
+    <div class="empty1"></div>
+    <div class="title">
+        <p id="needHelp"><b><i>Need Help?</i></b></p>
+        <p id="assist">Have a question? Need some help?
+            Let us know how we can assist you!</p>
+    </div>
 
-                <div class="contact">
-                    <div id="empty2"></div>
-                    <p>specsify@gmail.com</p>
-                    <div id="line1"></div>
-                    <p id="email">Email us</p>
+    <!-- Contents that will appear on the page -->
+    <div class="contact">
+        <div id="empty2"></div>
+        <p>specsify@gmail.com</p>
+        <div id="line1"></div>
+        <p id="email">Email us</p>
 
-                    <div id="empty3"></div>
-                    <p>@Specsify</p>
-                    <div id="line2"></div>
-                    <p id="twitter">Tweet us</p>
-                </div>
-  </body>
+        <div id="empty3"></div>
+        <p>@Specsify</p>
+        <div id="line2"></div>
+        <p id="twitter">Tweet us</p>
+    </div>
+</body>
+
 </html>
