--- a/questionnaire.html
+++ b/questionnaire.html
@@ -2,163 +2,148 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Questionnaire</title>
+  <title>Questionnaire</title>
+  <meta charset="UTF-8">
+  <!-- Bootstrap for navigation bar -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-    <script type="text/javascript" src="navbar.js"></script>
-    <link rel="stylesheet" href="style/questionnaire_CSS.css">
+  <script type="text/javascript" src="navbar.js"></script>
 
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-firestore.js"></script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-firestore.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-firestore.js"></script>
 
-
-
-
-    <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
-<!-- TODO: Add SDKs for Firebase products that you want to use
+  <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+  <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
-<script>
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyDWTUQMurE64ovJnLuICKLCgz2zSlsW0eo",
-    authDomain: "cybersify-2019.firebaseapp.com",
-    databaseURL: "https://cybersify-2019.firebaseio.com",
-    projectId: "cybersify-2019",
-    storageBucket: "cybersify-2019.appspot.com",
-    messagingSenderId: "286797146225",
-    appId: "1:286797146225:web:f5c728822bba76ec9053d0"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
+  <script>
+    // Our web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyDWTUQMurE64ovJnLuICKLCgz2zSlsW0eo",
+      authDomain: "cybersify-2019.firebaseapp.com",
+      databaseURL: "https://cybersify-2019.firebaseio.com",
+      projectId: "cybersify-2019",
+      storageBucket: "cybersify-2019.appspot.com",
+      messagingSenderId: "286797146225",
+      appId: "1:286797146225:web:f5c728822bba76ec9053d0"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
     var db = firebase.firestore();
-</script>
+  </script>
+
+  <!-- Style sheet associated with the questionnaire page -->
+  <link rel="stylesheet" href="style/questionnaire_CSS.css">
+
 </head>
 
 <body>
-    <!--Navbar-->
-    <nav class="navbar navbar-dark  indigo darken-2" style="background-color: #2f3e9f; margin: 10px;">
+  <!--Navbar-->
+  <nav class="navbar navbar-dark  indigo darken-2" style="background-color: #2f3e9f; margin: 10px;">
 
-            <!-- Navbar brand -->
-            <a class="navbar-brand" href="#">Specsify</a>
+    <!-- Navbar brand -->
+    <a class="navbar-brand" href="#">Specsify</a>
 
-            <!-- Collapse button -->
-            <button class="navbar-toggler third-button" type="button" data-toggle="collapse" data-target="#navbarSupportedContent22"
-            aria-controls="navbarSupportedContent22" aria-expanded="false" aria-label="Toggle navigation">
-            <div class="animated-icon3"><span></span><span></span><span></span></div>
-            </button>
+    <!-- Collapse button -->
+    <button class="navbar-toggler third-button" type="button" data-toggle="collapse"
+      data-target="#navbarSupportedContent22" aria-controls="navbarSupportedContent22" aria-expanded="false"
+      aria-label="Toggle navigation">
+      <div class="animated-icon3"><span></span><span></span><span></span></div>
+    </button>
 
-            <!-- Collapsible content -->
-            <div class="collapse navbar-collapse" id="navbarSupportedContent22">
+    <!-- Collapsible content -->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent22">
 
-            <!-- Links -->
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                <a class="nav-link" href="Home_page.html">Home page<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="Account_page.html">Account</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="help_us.html">Need help?</a>
-                </li>
-            </ul>
-            <!-- Links -->
-            </div>
-            <!-- Collapsible content -->
-    </nav>
-    <div class="title">
-      <p><b> Welcome to the Quiz! </b></p>
+      <!-- Links -->
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="Home_page.html">Home page<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Account_page.html">Account</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="help_us.html">Need help?</a>
+        </li>
+      </ul>
     </div>
+  </nav>
+  <div class="title">
+    <p><b> Welcome to the Quiz! </b></p>
+  </div>
+  <br>
+
+  <!----------------------------------->
+  <!-- Create a form                 -->
+  <!----------------------------------->
+  <div style="text-align: center">
+    <form id="myform">
+
+      <p>What is your major?</p>
+      <select size="4" required="required" name="major" id="q0">
+        <option value="Business">Business</option>
+        <option value="Sciences">Sciences</option>
+        <option value="Nursing">Nursing</option>
+        <option value="Others">Others</option>
+      </select>
+
+      <p>What type of school work will you mainly be using the device for?</p>
+      <select size="3" required="required" name="usage" id="q1">
+        <option value="Mostly coding">Mostly coding</option>
+        <option value="Mostly word or excel">Mostly word or excel</option>
+        <option value="Mostly browser based applications">Mostly browser based applications</option>
+
+      </select>
+
+      <p>How frequently will you bring this device to school?</p>
+      <select size="3" required="required" name="frequency" id="q2">
+        <option value="Once a week">Once a week</option>
+        <option value="2-3 times a week">2-3 times a week</option>
+        <option value="Daily">Daily</option>
+      
+      </select>
+
+      <p>Will you be using the device more heavily for (hobbies outside of school work)?</p>
+      <select size="4" required="required" name="hobbies" id="q3">
+        <option value="Gaming">Gaming</option>
+        <option value="Video Editing">Video Editing</option>
+        <option value="Photography">Photography</option>
+        <option value="Others">Others</option>
+
+      </select>
+      <!-- Submit to write on database -->
+      <div class="empty"></div>
+      <button class="submitButton" , type="submit">Submit</button>
+    </form>
     <br>
+    <!-- Continue to the review answers page -->
+    <form action="Answers.html">
+      <button class="submitButton" , type="submit">Continue</button>
+    </form>
+  </div>
+  <br>
+  <div id="results">
+  </div>
 
-    <!----------------------------------->
-    <!-- Create a form                 -->
-    <!----------------------------------->
-    <div style="text-align: center">
-        <form id="myform">
+  <!----------------------------------------------->
+  <!--   All my own javascript goes here   -->
+  <!----------------------------------------------->
+  <script src="script/application1.js"></script>
+  <script>
 
-<!--
-            <p>What do you study in college:</p>
-  <input type="radio" id="q0" name="major" value="business"> Business<br>
-  <input type="radio" id="q0" name="major" value="sciences"> Sciences<br>
-  <input type="radio" id="q0" name="major" value="nursing"> Nursing<br>
-  <input type="radio" id="q0" name="major" value="other"> Others<br>
--->
-
-            <p>What is your major?</p>
-            <select size="4" required = "required" name="major" id="q0">
-          <option value="Business">Business</option>
-          <option value="Sciences">Sciences</option>
-          <option value="Nursing">Nursing</option>
-          <option value="Others">Others</option>
-
-        </select>
-
-
-            <p>What type of school work will you mainly be using the device for?</p>
-            <select size="3" required = "required" name="usage" id="q1">
-          <option value="Mostly coding">Mostly coding</option>
-          <option value="Mostly word or excel">Mostly word or excel</option>
-          <option value="Mostly browser based applications">Mostly browser based applications</option>
-
-
-        </select>
-
-
-            <p>How frequently will you bring this device to school?</p>
-            <select size="3" required = "required" name="frequency" id="q2">
-          <option value="Once a week">Once a week</option>
-          <option value="2-3 times a week">2-3 times a week</option>
-          <option value="Daily">Daily</option>
-<!--          <option value="others" selected="selected">Others</option>-->
-
-        </select>
-
-
-            <p>Will you be using the device more heavily for (hobbies outside of school work)?</p>
-            <select size="4" required = "required" name="hobbies" id="q3">
-          <option value="Gaming">Gaming</option>
-          <option value="Video Editing">Video Editing</option>
-          <option value="Photography">Photography</option>
-          <option value="Others">Others</option>
-
-        </select>
-        <div class="empty"></div>
-            <button class= "submitButton", type="submit">Submit</button>
-        </form>
-        <br>
-        <form action="Answers.html">
-            <button class="submitButton", type="submit">Continue</button>
-          
-        </form>
-
-    </div>
-    <br>
-    <div id="results">
-    </div>
-
-    <!----------------------------------------------->
-    <!--   All my own javascript stuff goes here   -->
-    <!----------------------------------------------->
-    <script src="script/application1.js"></script>
-    <script>
-//        console.log(document.getElementById("q3").value);
-//        alert(document.getElementById("q3").value);
-        createUser();
-        setFormListener("myform");
-    </script>
+    createUser();
+    setFormListener("myform");
+  </script>
 </body>
 
 </html>
